@@ -332,23 +332,6 @@ grub_raid_close (grub_disk_t disk __attribute ((unused)))
   return;
 }
 
-void
-grub_raid_block_xor (char *buf1, const char *buf2, int size)
-{
-  grub_size_t *p1;
-  const grub_size_t *p2;
-
-  p1 = (grub_size_t *) buf1;
-  p2 = (const grub_size_t *) buf2;
-  size /= GRUB_CPU_SIZEOF_VOID_P;
-
-  while (size)
-    {
-      *(p1++) ^= *(p2++);
-      size--;
-    }
-}
-
 static grub_err_t
 grub_raid_read (grub_disk_t disk, grub_disk_addr_t sector,
 		grub_size_t size, char *buf)
